# AutoHarness

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  action.yml  mkdocs.yml  pyproject.toml
action/: README.md
autoharness/: __init__.py  agent_loop.py  wrap.py
autoharness/agents/: __init__.py  background.py  builtin.py  definition.py  fork.py  model_router.py  swarm.py  worktree.py
autoharness/cli/: __init__.py  main.py
autoharness/compiler/: __init__.py  prompt.py
autoharness/context/: __init__.py  artifacts.py  autocompact.py  microcompact.py  models.py  post_compact.py  recovery.py  token_budget.py  tokens.py
autoharness/core/: __init__.py  anti_distillation.py  audit.py  constitution.py  feature_flags.py  hook_profiles.py  hooks.py  multi_agent.py  permissions.py  pipeline.py  risk.py  risk_multi.py  sentiment.py  trust.py  trust_gate.py  turn_governor.py  types.py  verification.py
autoharness/integrations/: __init__.py  claude_code.py  crewai.py  cursor.py  langchain.py  policy_engines.py
autoharness/marketplace/: __init__.py  registry.py
autoharness/observability/: __init__.py  cost_attribution.py  metrics.py  tracing.py
docs/: EXPERIMENT_GUIDE.md  EXPERIMENT_GUIDE_CN.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  TESTING_GUIDE.md  TESTING_GUIDE_CN.md  changelog.md  cli.md  features.md  index.md
examples/: agent_orchestration_demo.py  anthropic_integration.py  basic_usage.py  cedar_policy.cedar  claude_code_install.py  constitution.yaml  context_management_demo.py  custom_hooks.py  full_pipeline_demo.py  opa_policy.rego  prompt_architecture_demo.py  quickstart.py  session_management_demo.py  skill_system_demo.py  tool_registry_demo.py
tests/: conftest.py  test_agent_loop.py  test_agent_orchestration.py  test_audit.py  test_cli_wrap.py  test_constitution.py  test_hooks.py  test_init_wizard.py  test_integration.py  test_multi_agent.py  test_new_features.py  test_observability.py  test_permissions.py  test_phases_6_to_9.py  test_pipeline.py  test_pipeline_modes.py  test_prompt_system.py  test_risk.py  test_skill_system.py  test_tool_system.py  test_turn_governor.py  test_types.py  test_v2_features.py  test_validation.py  test_verification.py
(+67 files in other folders)
